add zarr3 notebook

--- a/bench/era5_bench_zarr3.ipynb
+++ b/bench/era5_bench_zarr3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install zarr==2.18 fsspec[gcs]"
+    "!pip install zarr==3.0.1 fsspec[gcs]"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "        mode='r',\n",
     "        storage_options = {'token': 'anon', 'use_listings_cache': False})\n",
     "t = time()\n",
-    "members = tuple(z.items())\n",
+    "members = tuple(z.members())\n",
     "elapsed = time() - t\n",
     "print(f'Elapsed: {elapsed:0.2f} seconds')"
    ]
