--- a/bench/list_group_zarr3.ipynb
+++ b/bench/list_group_zarr3.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
    "outputs": [],
    "source": [
     "!pip install zarr==3.0.1 fsspec[gcs]"
