--- a/bench/open_dataset_zarr3.ipynb
+++ b/bench/open_dataset_zarr3.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "plaintext"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
@@ -16,20 +16,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import xarray\n",
     "import time\n",
     "\n",
-    "uri = 'gs://gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3'\n",
+    "url = 'gs://gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3'\n",
     "start = time.time()\n",
     "xarray.open_dataset(\n",
-    "\turi,     \n",
+    "\turl,     \n",
     "\tengine='zarr',     \n",
     "\tconsolidated=False,     \n",
     "\tstorage_options = {'token': 'anon'})\n",
