--- a/bench/list_prefix.ipynb
+++ b/bench/list_prefix.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install gcsfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from gcsfs import GCSFileSystem\n",
     "from time import time\n",
     "\n",
