--- a/bench/list_prefix.ipynb
+++ b/bench/list_prefix.ipynb
@@ -22,10 +22,10 @@
     "\n",
     "fs = GCSFileSystem(token='anon')\n",
     "start = time()\n",
-    "_ = fs.ls(url)\n",
+    "list_results = fs.ls(url)\n",
     "\n",
     "elapsed = time() - start\n",
-    "print(f'elapsed:  {time.time() - start:0.2f} seconds')"
+    "print(f'elapsed:  {time() - start:0.2f} seconds')"
    ]
   }
  ],
